--- a/.github/workflows/linter client.yml
+++ b/.github/workflows/linter client.yml
@@ -3,7 +3,7 @@
 ## Linter GitHub Actions ##
 ###########################
 ###########################
-name: Lint Client Code Base
+name: Lint Frontend Code Base
 
 #
 # Documentation:
@@ -31,9 +31,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2-beta
         with:
-          node-version: "14"
+          node-version: '14'
       - run: npm ci
-        working-directory: client
+        working-directory: frontend
       - run: npm run lint
-        working-directory: client
-
+        working-directory: frontend
