--- a/.github/workflows/frontendTesting.yml
+++ b/.github/workflows/frontendTesting.yml
@@ -2,7 +2,7 @@ name: Frontend testing
 
 on:
   push:
-    branches: [DEV]
+    branches: [DEV, 279_refactor_folder_structure]
   pull_request:
     branches: [DEV]
   workflow_dispatch:
@@ -24,6 +24,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm ci
-        working-directory: client
+        working-directory: frontend
       - run: npm test
-        working-directory: client
+        working-directory: frontend
