--- a/.github/workflows/publishDocumentation.yml
+++ b/.github/workflows/publishDocumentation.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: navigate to client and build
-        run: cd ./client/ && npm install --save-dev better-docs jsdoc && npm run docs
+        run: cd ./frontend/ && npm install --save-dev better-docs jsdoc && npm run docs
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
