--- a/.github/workflows/frontendTesting.yml
+++ b/.github/workflows/frontendTesting.yml
@@ -2,7 +2,7 @@ name: Frontend testing
 
 on:
   push:
-    branches: [DEV, 279_refactor_folder_structure]
+    branches: [DEV]
   pull_request:
     branches: [DEV]
   workflow_dispatch:
