updated workflow for testing

--- a/.github/workflows/publishDocumentation.yml
+++ b/.github/workflows/publishDocumentation.yml
@@ -3,7 +3,7 @@ name: Publish Documentation to GitHub pages
 on:
   push:
     branches:
-      - main
+      - 281_documentation
 
 jobs:
   deploy:
