fixed workflow II

--- a/documentationConfig.json
+++ b/documentationConfig.json
@@ -8,12 +8,7 @@
   },
   "plugins": ["node_modules/better-docs/category"],
   "source": {
-    "include": [
-      "./../frontend/src",
-      "./../server/api/",
-      "./../server/socket/",
-      "./../server/utils"
-    ],
+    "include": ["./../frontend/src", "./../server/utils/ssotToRobotParsing"],
     "exclude": ["./../frontend/node_modules", "./../server/node_modules"],
     "includePattern": ".+\\.js(doc|x)?$",
     "excludePattern": "(^|\\/|\\\\)_"
